--- a/sass/partials/_header-two.scss
+++ b/sass/partials/_header-two.scss
@@ -68,7 +68,7 @@
           padding: 30px;
           &:last-child{
             @include lg{
-              padding-right: 16px;
+              padding-right: 20px;
             }
           }
           &:before {
